# DGSvsHS

./: .gitattributes  .gitignore  CLAUDE.md  METHODOLOGY.md  README.md  log.txt  log_utf8.txt
DGSvsHS/: build_microvm_x86_64.sh
DGSvsHS/Assets/Scenes/: Client.unity
DGSvsHS/ProjectSettings/: ProjectSettings.asset
Unreal/UnrealvsHS/: build_microvm_x86_64.sh
Unreal/UnrealvsHS/Config/: DefaultEngine.ini
csharp_arch_server/: Program.cs  build_microvm_aarch64.sh  build_microvm_x86_64.sh
csharp_arch_server/Gameplay/: Constants.cs  DeterministicRng.cs  InputCmd.cs  SimState.cs  Snapshot.cs
csharp_arch_server/Net/: QuicServer.cs  SnapshotPriority.cs  WireCodec.cs
csharp_arch_server/Server/: Components.cs  RecipientSnapshotState.cs  SimBootstrap.cs  SimContext.cs  WorldStateHistory.cs
csharp_arch_server/scripts/: publish_linux.sh  publish_windows.ps1
native/quic_client/: Cargo.toml
native/quic_client/src/: client.rs
rust/: Cargo.toml  build_microvm_aarch64.sh  build_microvm_x86_64.sh
rust/gameplay/: Cargo.toml
rust/gameplay/src/: lib.rs  system_metrics.rs
rust/gameplay/src/game/: constants.rs  mod.rs  spatial.rs
rust/gameplay/src/game/sim/: components.rs  movement.rs  plugin.rs  rewind.rs  round.rs
rust/gameplay/src/network/: codec.rs  plugin.rs
rust/gameplay/src/server/: bitset.rs  broadcast.rs  capture.rs  history.rs  lifecycle.rs  mod.rs  priority.rs  recipient.rs
test_harness/: .env.exemple  generate_graph.py  record_run.py  run_case.py
test_harness/results/: bevy_run_1.jsonl  bevy_run_2.jsonl  bevy_run_3.jsonl  unreal_run_1.jsonl
(+31 files in other folders)
